
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.zinnox.projects.followappui.adapters.TabHomeSettings"
    android:id="@+id/aboutxmll">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ScrollView01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:background="@color/bordercolor">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:paddingLeft="-9dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:text="@string/AboutApp_1"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/AboutApp_1.1"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:textSize="14dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:paddingLeft="-9dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:text="@string/AboutApp_2"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/AboutApp_2.1"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:textSize="14dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:paddingLeft="-9dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:text="@string/AboutApp_3"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/AboutApp_3.1"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:textSize="14dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:paddingLeft="-9dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:text="@string/AboutApp_4"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/AboutApp_4.1"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:textSize="14dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:paddingLeft="-9dp"
            android:clickable="true"

            >
            <TextView
                android:layout_width="match_parent"
                android:text="@string/AboutApp_5"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:textSize="18dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:paddingLeft="-9dp"
            android:clickable="true">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/AboutApp_6"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:textSize="18dp"/>
        </RelativeLayout>

    </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</RelativeLayout>
