
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:picker="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.zinnox.projects.followappui.adapters.TabHomeSettings"
    android:id="@+id/settingxml">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

<LinearLayout
    android:id="@+id/DisablePickerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:orientation="vertical"
    android:background="@color/bordercolor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginBottom="1dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/setting_1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="18dp"/>
        <com.zinnox.projects.followappui.views.SwitchButton
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            picker:sb_checked_color="@color/colorPrimary"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginBottom="1dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/setting_2"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="18dp"/>
        <ImageView
            android:id="@+id/info_use_in_call"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"
            android:src="@drawable/icons_info"/>

        <com.zinnox.projects.followappui.views.SwitchButton
            android:id="@+id/toggle_use_in_call"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            picker:sb_checked_color="@color/colorPrimary"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginBottom="1dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/setting_3"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="18dp"/>
        <TextView
            android:id="@+id/setting_3_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"
            android:text="null"
            android:textColor="@color/colorPrimaryDark"
            />
        <ImageView
            android:id="@+id/info_set_3"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"
            android:src="@drawable/icons_info"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/arrowfill"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginBottom="1dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/setting_4"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="18dp"/>

        <ImageView
            android:id="@+id/info_set_4"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"
            android:src="@drawable/icons_info"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/arrowfill"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginBottom="1dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/setting_5"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="18dp"/>
        <TextView
            android:id="@+id/setting_5_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"
            android:text="Not Set"
            android:textColor="@color/colorPrimaryDark"
            />
        <TextView
            android:id="@+id/info_set_5"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:text="****"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:textSize="18dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginBottom="1dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/setting_6"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="18dp"/>
        <TextView
            android:id="@+id/setting_6_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"
            android:text="null"
            android:textColor="@color/colorPrimaryDark"
            />
        <ImageView
            android:id="@+id/info_set_6"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"
            android:src="@drawable/icons_info"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/arrowfill"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginBottom="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/setting_7"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="18dp"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/arrowfill"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_8"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginBottom="1dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/setting_8"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="18dp"/>
        <ImageView
            android:id="@+id/info_set_8"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"
            android:src="@drawable/icons_info"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/arrowfill"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_9"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_marginBottom="1dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:text="@string/setting_9"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="18dp"
            android:layout_marginLeft="-30dp"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/arrowfill"/>
    </RelativeLayout>

</LinearLayout>

   </ScrollView>
    <com.sgiosviews.SGPickerView
        android:id="@+id/pickerView"
        android:background="@color/bordercolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        picker:defaultTextColor="#ccc"
        picker:selectedTextColor="#666"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
